# CoC-API-wrapper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  endpoint_map.md  plan.md  pyproject.toml  task.md
.github/workflows/: ci.yml
coc_api_wrapper/: __init__.py  async_client.py  bot.py  cache.py  client.py  exceptions.py  models.py  utils.py
coc_api_wrapper/adapters/: __init__.py  aiogram.py  discord.py
examples/: async_basic.py  sync_basic.py
tests/: test_async_client.py  test_bot_helpers.py  test_cache.py  test_client_endpoints.py  test_client_pagination.py  test_client_retry.py  test_utils.py
